--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 sap-ui-cachebuster-info.json
 extended_runnable_file.html
 .*/extended_runnable_file.html
@@ -10,3 +9,6 @@ fioriHtmlRunner.html
 .*/fioriHtmlRunner.html
 mock_preview_sapui5.html
 .*/mock_preview_sapui5.html
+/.user.project.json
+node_modules
+/webapp/SAPUI5
