finish slide page nav and routing

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -86,7 +86,7 @@
                     "target": "launchpad"
                 }, {
                 	"name": "topic-introduction",
-                    "pattern": "introduction",
+                    "pattern": "introduction/:slidePageNum:",
                     "target": "topic-introduction"
                 }
             ],
