--- a/webapp/component/introduction/manifest.json
+++ b/webapp/component/introduction/manifest.json
@@ -69,7 +69,7 @@
             "routes": [
             	{
             		"name": "main",
-                    "pattern": "introduction",
+                    "pattern": "introduction/:slidePageNum:",
                     "target": "main"
                 }
             ],
