--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -45,7 +45,8 @@
 			"libs": {
 				"sap.ui.core": {},
 				"sap.m": {},
-				"sap.ui.layout": {}
+				"sap.ui.layout": {},
+				"utegration.fiori.frontend.control": {}
 			}
 		},
 		"contentDensities": {
