finish history topic

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -95,6 +95,11 @@
                 	"name": "topic-introduction",
                     "pattern": "introduction/:slidePageNum:",
                     "target": "topic-introduction"
+                },
+                {
+                	"name": "topic-history",
+                    "pattern": "history/:slidePageNum:",
+                    "target": "topic-history"
                 }
             ],
             "targets": {
@@ -104,6 +109,9 @@
                 },
                 "topic-introduction": {
                     "viewName": "TopicIntroduction"
+                },
+                "topic-history": {
+                    "viewName": "TopicHistory"
                 }
             }
 	    }
