--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -100,6 +100,11 @@
                 	"name": "topic-history",
                     "pattern": "history/:slidePageNum:",
                     "target": "topic-history"
+                },
+                {
+                	"name": "topic-launchpad",
+                    "pattern": "launchpad/:slidePageNum:",
+                    "target": "topic-launchpad"
                 }
             ],
             "targets": {
@@ -112,6 +117,9 @@
                 },
                 "topic-history": {
                     "viewName": "TopicHistory"
+                },
+                "topic-launchpad": {
+                    "viewName": "TopicLaunchpad"
                 }
             }
 	    }
