--- a/neo-app.json
+++ b/neo-app.json
@@ -1,11 +1,20 @@
 {
   "welcomeFile": "/webapp/index.html",
   "routes": [
+  	{
+      "path": "/northwind",
+      "target": {
+        "type": "destination",
+        "name": "northwind"
+      },
+      "description": "Northwind OData Service"
+    },
     {
       "path": "/resources",
       "target": {
         "type": "service",
         "name": "sapui5",
+        "preferLocal": true,
         "entryPath": "/resources"
       },
       "description": "SAPUI5 Resources"
@@ -19,6 +28,5 @@
       },
       "description": "SAPUI5 Test Resources"
     }
-  ],
-  "sendWelcomeFileRedirect": true
+  ]
 }
