--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,5 +1,6 @@
 {
 	"_version": "1.1.0",
+	"start_url": "start.html",
 	"sap.app": {
 		"_version": "1.1.0",
 		"id": "utegration.fiori.frontend",
@@ -10,6 +11,8 @@
 		},
 		"title": "{{appTitle}}",
 		"description": "{{appDescription}}",
+		"ach": "sap",
+		"resources": "resources.json",
 		"sourceTemplate": {
 			"id": "ui5template.basicSAPUI5ApplicationProject",
 			"version": "1.32.0"
@@ -105,6 +108,11 @@
                 	"name": "topic-launchpad",
                     "pattern": "launchpad/:slidePageNum:",
                     "target": "topic-launchpad"
+                },
+                {
+                	"name": "topic-fioriElement",
+                    "pattern": "fioriElement/:slidePageNum:",
+                    "target": "topic-fioriElement"
                 }
             ],
             "targets": {
@@ -120,6 +128,9 @@
                 },
                 "topic-launchpad": {
                     "viewName": "TopicLaunchpad"
+                },
+                "topic-fioriElement": {
+                    "viewName": "TopicFioriElement"
                 }
             }
 	    }
