finish list report demo

--- a/webapp/component/designFioriApps/manifest.json
+++ b/webapp/component/designFioriApps/manifest.json
@@ -32,7 +32,8 @@
             "libs": {
                 "sap.ui.core": {},
 				"sap.m": {},
-				"sap.ui.layout": {}
+				"sap.ui.layout": {},
+				"sap.f": {}
             }
         },
         "contentDensities": {
